# the-truth

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
src/: main.c++  the_objective_reality.hpp  the_truth.h++
src/__f__a__c__t__s__/: __1__1__1__.hpp  __a__r__t__.hpp  __c__o__d__e__.h  __c__o__r__e__.h++  __d__a__t__a__.h  __d__i__s__c__r__e__e__n__.hpp  __d__i__s__k__.h  __e__t__e__r__n__i__t__y__.h++  __f__a__c__t__.c++  __f__a__c__t__.h  __h__a__l__l__o__w__e__d__.h++  __p__r__a__i__s__e__.h  __r__e__s__o__l__u__t__i__o__n__.h++  __s__c__r__e__e__n__.hpp  __w__e__.h  __y__o__u__r__.h++  ░█░█░░█░█░█░.h
src/__m__i__n__d__/: __g__l__o__r__y__.h  __i__m__m__o__r__t__a__l__.hpp  __m__e__a__n__i__n__g__.h++  __t__r__u__s__t__.cpp  __t__r__u__s__t__.h++
